2003-07-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/Makefile.am (noinst_HEADERS): Need to distribute
	magick_compat.h.
	(EXTRA_DIST): Need to distribute GraphicsMagickWand-config.1.
	* coders/wmf.c (ipa_bmp_draw): Use CopyException.
	(ipa_device_begin): Use CopyException.
	(lite_font_map): Use CopyException.
	* coders/jpeg.c (ReadJPEGImage): Use CopyException.
	* magick/image.c (GetImageException): Use CopyException.
	* magick/constitute.c (WriteImages): Use CopyException.
	* Makefile.am (DIST_SUBDIRS): wand needs to be included in
	distribution.

2003-06-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/static.c (RegisterStaticModules): Invoke
	RegisterTOPOLImage.
	* magick/magick.h (MagickInfo): Add member usage comments.
	* magick/error.c (CatchException): Restore saved errno from
	exception->error_number.
	(CopyException): Copy error_number.
	(DestroyExceptionInfo): Reset error_number to zero.
	(GetExceptionInfo): Initialize error_number to zero.
	(ThrowException): Save errno to exception-> error_number.
	(ThrowLoggedException): Save errno to exception-> error_number.
	* magick/error.h (ExceptionInfo): Borrow John Cristy's idea and
	add a error_number member to ExceptionInfo to save the current
	errno value. Otherwise CatchException may use some random errno.
	* coders/Makefile.am: Build topol.c.
	* coders/topol.c: Added initial TOPOL X image coder which is under
	development by Jaroslav Fojtik. Not working yet.

2003-06-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pwp.c (ReadPWPImage): Ensure that image is initialized
	before invoking ThrowReaderException.
	* magick/image.c (CloneImage): Use CopyException.
	* magick/error.c (CopyException): Add function to support copying
	ExceptionInfo structures.
	* magick/error.h (ExceptionInfo): Replaced recently-added 'whence'
	member with module, function, and line members in order to keep
	the information seperate, and match the parameters used by the
	logging system.