@@ -56,6 +56,7 @@
 2003-07-02  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> coders/jpeg.c (ReadJPEGImage): Conditionally copy exception.
   <LI> wand/Makefile.am (noinst_HEADERS): Need to distribute
         magick_compat.h.<BR>
         (EXTRA_DIST): Need to distribute GraphicsMagickWand-config.1.
